--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: HollowGL的个人博客
-subtitle: ''
-description: ''
+subtitle: 测试副标题
+description: 写点啥好呢？
 keywords:
 author: John Doe
 language: zh-CN
